--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo-removebg-preview.png" width="321" height="194" class="nav-img " loading="lazy">
+            <img src="logo-removebg-preview.png" width="321" height="194" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -40,7 +40,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-removebg-preview.png" class="mb-3" width="563"
+                    <img src="logo-removebg-preview.png" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
@@ -66,20 +66,20 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/galery1.jpeg"
+                        <img src="galery1.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/galery2.jpeg" class="img-fluid rounded-5"
+                        <img src="galery2.jpeg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/galery3.jpeg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="galery3.jpeg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/galery4.jpeg"
+                        <img src="galery4.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
